--- a/app/assets/stylesheets/home_style.css
+++ b/app/assets/stylesheets/home_style.css
@@ -1,3 +1,5 @@
+
+
 /* change bg color to blue line 11320 on styles */
 header.masthead {
     background: linear-gradient(0deg, #a2dafa 0%, #026ead 100%) !important; 
@@ -8,7 +10,7 @@ header.masthead .bg-circle {
     background: linear-gradient(0deg, #026ead 0%, #a2dafa 100%) !important; 
   }
 
-/* Navigation line 11313 */
+/* NAV PG line 11313 */
 .navbar .navbar-expand-lg .navbar-dark .navbar-custom .fixed-top {
     background-color: rgba(0, 0, 0, 0.7) !important;   
 }
@@ -18,16 +20,33 @@ header.masthead .bg-circle {
     color: rgba(0, 0, 0, 0.7) !important;
 }
 
+/* Footer Pg */
 
-  /*.btn .btn-primary .btn-xl .rounded-pill .mt-5 {
-      background-color: #ffffff !important;
-      color: #026ead !important;
-  }
-  .btn-primary {
-      background-color: #ffffff !important;
-      color: #000000 !important;
-  }
-  .btn-xl {
-      background-color: #ffffff !important;
-      color: #000000 !important;
-  } */
+/* Index Pg */
+
+/* About Pg styling */
+/* Addl space from nav */
+.p-5 {
+    margin-top: 100px !important;
+}
+
+/* Center headings */
+.display-4 {
+    text-align: center !important;
+}
+
+/* BG color for foster section */
+section#foster {
+    background-color: #daecf8 !important;
+}
+
+/* Foster and Adoptable btn */
+.btn.btn-primary {
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    margin-left: 250px;
+}
+
+
+  
