--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,9 +1,11 @@
-<!-- 1st About Us -->
+
+    <!-- 1st About Us -->
     <section id="scroll">
-        <div class="container px-5">
+        <div class="container px-5 about">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><%= image_tag("happy.jpeg", class: "img-fluid rounded-circle", alt: "Barklee Dog") %></div>
+                   <div class="p-5"><%= image_tag("high-five.jpeg", class: "img-fluid", alt: "Foster with dog") %>
+                   </div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
@@ -16,22 +18,29 @@
         </div>
     </section>
 
+    
+
     <!-- 2nd Foster Dogs -->
     <section>
         <div class="container px-5">
-            <div class="row gx-5 align-items-center">
-                <div class="col-lg-6">
-                    <div class="p-5"><%= image_tag("reggie.jpg", class: "img-fluid rounded-circle", alt: "Reggie with cat") %></div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="p-5">
-                        <h2 class="display-4">Meet The Fosters</h2>
-                        <p>Our <strong>foster dogs</strong> are located out of state, awaiting transportation up north. Although most live in a home environment with their foster family for a few weeks, we have a few dogs in boarding due to a shortage of foster parents. We try not to rely on boarding, since we feel our dogs do better in a home life than at a boarding kennel.</p>
-                        <p>Texas foster parents work together to transport dogs to doctor&apos;s appointments, provide information on training, and share other resources. They have different levels of experience fostering dogs over several years.</p>
-                        <p>If you are interested in a dog, you can begin the process early, by submitting an applicataon while the dogs are still in foster care. No final decision will be made, until after the dogs arrive in Michigan. Please visit our Foster Dogs page to view dogs in our organization.</p> 
+            <div class="row-foster">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6">
+                        <div class="p-5"><%= image_tag("foster_dog.jpeg", class: "img-fluid", alt: "Foster with dog") %>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="p-5">
+                            <h2 class="display-4">Meet The Fosters</h2>
+                                <p>Our foster dogs are located out of state, awaiting transportation up north. Although most live in a home environment with their foster family for a few weeks, we have a few dogs in boarding due to a shortage of foster parents. We try not to rely on boarding, since we feel our dogs do better in a home life than at a boarding kennel.</p>
+                                <p>Texas foster parents work together to transport dogs to doctor&apos;s appointments, provide information on training, and share other resources. They have different levels of experience fostering dogs over several years.</p>
+                                <p>If you are interested in a dog, you can begin the process early, by submitting an applicataon while the dogs are still in foster care. No final decision will be made, until after the dogs arrive in Michigan. Please visit our Foster Dogs page to view dogs in our organization.</p> 
+                        </div>
+                        <div><a class="btn btn-primary" href="#" role="button">Fosters</a>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </div> <!--  /row -->
         </div>
     </section>
     
@@ -40,18 +49,22 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><%= image_tag("reggie.jpg", class: "img-fluid rounded-circle", alt: "Buzz with birthday cake") %></div>
+                <div class="p-5"><%= image_tag("reggie.jpg", class: "img-fluid", alt: "Buzz with birthday cake") %>
+                </div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">Adoptables</h2>
-                        <p><strong>Our adoptable dogs</strong> are already here in Michigan looking for their forever homes. Once they arrive from transport, they live with their foster family until they are adopted. This gives the dogs time to rest from their travels and acclimate to the northern environment. We also feel they benefit by continung to live with families in a home environment.</p>
-                        <p>In most cases, the timeframe before placement is short, since our dogs have been marketed for several weeks. If you are interested in becoming a foster for these dogs, please submit an application. The more foster parents we have, the more dogs we can save.</p> 
+                        <h2 class="display-4">Adorable Adoptables</h2>
+                        <p>Our adoptable dogs are already here in Michigan looking for their forever homes. Once they arrive from transport, they live with their foster family until they are adopted. This gives the dogs time to rest from their travels and acclimate to the northern environment. We also feel they benefit by continung to live with families in a home environment.</p>
+                        <p>In most cases, the timeframe before placement is short, since our dogs have been marketed for several weeks.  a foster for these dogs, please submit an application.</p> 
+                    </div>
+                    <div><a class="btn btn-primary" href="#" role="button">Adoptables</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
 
 
 
