--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <!-- Header-->
 <header class="masthead text-center text-white">
     <div class="masthead-content">
-        <div class="container px-5">
+        <div class="container px-5 header">
             <h1 class="masthead-heading mb-0">Compass Dog Rescue</h1>
             <h2 class="masthead-subheading mb-0">Pure Michigan</h2>
         </div>
@@ -27,6 +27,7 @@
             </div>
         </div>
     </section>
+
     <!-- 2nd Section Adoptable Dogs -->
     <section>
         <div class="container px-5">
@@ -43,6 +44,7 @@
             </div>
         </div>
     </section>
+
     <!-- 3rd Section Buzz Birthday -->
     <section>
         <div class="container px-5">
@@ -59,12 +61,6 @@
             </div>
         </div>
     </section>
-    <!-- Footer-->
-    <footer class="py-5 bg-black">
-        <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Compass Dog Rescue 2022</p></div>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    
+   
     
