--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
         <title>Compass Dog Rescue</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
+        
+        <script src="https://kit.fontawesome.com/602b151a02.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
@@ -21,8 +22,8 @@
     </head>
 
     <body>
-        <%= render 'layouts/nav' %>
-        <div class="container-fluid" >
+        <%= render "layouts/nav" %>
         <%= yield %>
+        <%= render 'layouts/footer' %>
     </body>
 </html>
