Move footer to partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,5 +24,6 @@
         <%= render 'layouts/nav' %>
         <div class="container-fluid" >
         <%= yield %>
+        <%= render 'layouts/footer' %>
     </body>
 </html>
