--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -3,7 +3,7 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><%= image_tag("happy.jpeg", class: "img-fluid rounded-circle", alt: "Barklee Dog") %></div>
+                    <div class="p-5"><%= image_tag("puppy.jpeg", class: "img-fluid rounded-circle", alt: "Barklee Dog") %></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
