--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
     <div class="masthead-content">
         <div class="container px-5">
             <h1 class="masthead-heading mb-0">Compass Dog Rescue</h1>
-            <h2 class="masthead-subheading mb-0">Pure Michigan</h2>
+            <h3>From Texas to <i>Pure Michigan</i></h3>
         </div>
     </div>
         <div class="bg-circle-1 bg-circle"></div>
@@ -16,12 +16,13 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><%= image_tag("happy.jpeg", class: "img-fluid rounded-circle", alt: "Barklee Dog") %></div>
+                    <div class="p-5"><%= image_tag("puppy.jpeg", class: "img-fluid", alt: "Barklee Dog") %></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">Who We Are</h2>
                         <p>Compass Dog Rescue is a 501c3/Nonprofit Organization dedicated to rescuing dogs from high kill shelters, specifically in the south where the euthanasia rate is very high, and guiding them North (hence the name - "Compass"), bringing them into foster care until qualified, loving forever homes can be found.</p>
+                    
                     </div>
                 </div>
             </div>
@@ -32,12 +33,13 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6">
-                    <div class="p-5"><%= image_tag("reggie.jpg", class: "img-fluid rounded-circle", alt: "Reggie with cat") %></div>
+                    <div class="p-5"><%= image_tag("burt-ernie.jpeg", class: "img-fluid", alt: "Two dogs") %></div>
                 </div>
                 <div class="col-lg-6">
                     <div class="p-5">
                         <h2 class="display-4">Adopt Us</h2>
-                        <p>Please visit the photo album section of the page to see dogs currently in foster care and available for adoption.</p>
+                        <p>Please visit the photo album section of the page to see dogs currently in foster care and available for adoption. Dogs arrive twice a month, so please check back often.
+                        We are also in need of foster parents and volunteers. If you are in interested in helping, please contact us. </p>
                     </div>
                 </div>
             </div>
@@ -48,7 +50,7 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><%= image_tag("reggie.jpg", class: "img-fluid rounded-circle", alt: "Buzz with birthday cake") %></div>
+                    <div class="p-5"><%= image_tag("buzz01.jpg", alt: "Buzz with birthday cake") %></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
