--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,7 +8,7 @@
             <li><%= link_to "About", home_about_path, class: "nav-link" %></li>
             <li><%= link_to "Adoptable Dogs", home_about_path, class: "nav-link" %></li>
             <li><%= link_to "Adoption Form", home_adoption_path, class: "nav-link" %></li>
-            <li><%= link_to "Contact Us", home_about_path, class: "nav-link" %></li>
+            <li><%= link_to "Contact Us", home_contactus_path, class: "nav-link" %></li>
           </ul>
         </div>
     </div>
